k3s-manifest/pihole/pihole-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: pihole-redirect-admin
  namespace: pihole
spec:
  redirectRegex:
    regex: "^https://pihole\\.syslabs\\.dev/$"
    replacement: "https://pihole.syslabs.dev/admin/"
    permanent: false
