k3s-manifest/pihole/pihole-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-web
  namespace: pihole
spec:
  selector:
    app: pihole
  ports:
  - name: web
    port: 80
    targetPort: 80
    protocol: TCP
  - name: https
    port: 443
    targetPort: 443
    protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-tcp
  namespace: pihole
spec:
  selector:
    app: pihole
  ports:
  - name: dns-tcp
    port: 53
    targetPort: 53
    protocol: TCP
  type: LoadBalancer  # K3s will assign a node port
  externalTrafficPolicy: Local
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-udp
  namespace: pihole
spec:
  selector:
    app: pihole
  ports:
  - name: dns-udp
    port: 53
    targetPort: 53
    protocol: UDP
  type: LoadBalancer  # K3s will assign a node port
  externalTrafficPolicy: Local
