k3s-manifest/pihole/pihole-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
  namespace: pihole
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pihole.syslabs.dev`)
      kind: Rule
      services:
        - name: pihole-web
          port: 80
      middlewares:
        - name: security-headers
          namespace: traefik
  tls:
    certResolver: cloudflare
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-http
  namespace: pihole
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`pihole.syslabs.dev`)
      kind: Rule
      services:
        - name: pihole-web
          port: 80
      middlewares:
        - name: redirect-https
          namespace: traefik
